--- a/Source/MMALSharp/MMALSharp.csproj
+++ b/Source/MMALSharp/MMALSharp.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.8" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MMALSharp.Native\MMALSharp.Native.csproj" />
     <ProjectReference Include="..\MMALSharp.Processing\MMALSharp.Processing.csproj" />
     <ProjectReference Include="..\MMALSharp.Common\MMALSharp.Common.csproj" />
   </ItemGroup>
